--- a/OOP basics/OOP basics.csproj
+++ b/OOP basics/OOP basics.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\OtherMethods\OtherMethods.csproj" />
+    <ProjectReference Include="..\Shapes\Shapes.csproj" />
   </ItemGroup>
 
   <ItemGroup>
